--- a/CentersBarCode/Platforms/Android/AndroidManifest.xml
+++ b/CentersBarCode/Platforms/Android/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.CentersBar">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.CentersBarCode">
 	<application 
 		android:allowBackup="true" 
 		android:icon="@mipmap/appicon" 
